--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -56,7 +56,7 @@ $display-heading: (
   "d-6": 2.625em,
   "d-7": 2.76875em,
   /// 44.3ox
-  "d-8": 2.13125em /// 34.1px,
+  "d-8": 2.13125em /// 34.1px,,,
 );
 $headings: (
   "h-1": 2.5rem,
@@ -186,8 +186,12 @@ $spacing-distance-relative: (
   /// 40px
   "s-3-31": 3.125em,
   /// 50px
-  's-3-43': 3.4375em,
+  "s-3-43": 3.4375em,
   /// 55px
+  "s-3-50": 3.5em,
+  /// 56px
+  "s-4-68": 4.6875em,
+  /// 75px
   "s-5-62": 5.625em,
   /// 90px
   "s-8-12": 8.125em,
